tests/specs/ecosystem/sftsrv/structured_html/0_0_2.test
sftsrv/structured-html/0.0.2
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2304 [ERROR]: Cannot find name 'Element'.
 */ export const convertHtmlToStructuredContents = (html: Element): EditorContent =>({} as never);
                                                          ~~~~~~~
    at file://<tmpdir>/src/index.ts:7:59

error: Type checking failed.

